[package]
name = "hpcac"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
inquire = "0.7.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tabled = "0.18.0"
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "migrate", "sqlite", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }
anyhow = "1.0.97"
tracing = "0.1.41"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
rand = "0.9.0"
aws-config = "1.6.0"
aws-sdk-sts = "1.63.0"
aws-credential-types = { version = "1.2.2", features = ["hardcoded-credentials"] }
dirs = "6.0.0"
aws-sdk-ec2 = "1.118.0"
futures = "0.3.31"
aws-sdk-servicequotas = "1.64.0"
aws-sdk-pricing = "1.67.0"
reqwest = { version = "0.12.15", features = ["json"] }
indicatif = "0.17.11"
