[tool.poetry]
name = "hpcc_services"
version = "0.1.0"
description = "HPC@Cloud Toolkit"
authors = ["Vanderlei <munhoz@protonmail.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
Django = "^4.1.4"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
django-rest-framework = "^0.1.0"
django-filter = "^22.1"
minio = "^7.1.15"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.2"
pytest = "^7.3.1"
pytest-django = "^4.5.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hpcc_api.settings"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
