[package]
name = "hpcac-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hpcac-core = { path="../core" }
clap = { version="^4", features=["cargo"] }
dotenv = "^0.15.0"
tokio = { version="^1.2", features=["full"] }
