[package]
name = "hpcac-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hpcac-core = { path="../core" }
clap = { version="^4", features=["cargo"] }
colored = "^1.9.0"
dotenv = "^0.15.0"
tokio = { version="^1.2", features=["full"] }
inquire = "0.5.2"
sqlx = { version = "^0.6", features = ["postgres", "offline", "runtime-async-std-native-tls", "chrono", "uuid", "json"] }
uuid = { version="^1.1", features=["serde", "v4"] }
prettytable-rs = "^0.10"