[package]
name = "hpcac-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hpcac_core"
bench = false
test = true
doctest = false

[dependencies]
cidr = { version="^0.2", features=["serde"] }
chrono = { version="^0.4", features=["serde"] }
hcl-rs = "^0.7.0"
serde = { version="^1.0", features=["derive"] }
serde_json = "^1.0"
sqlx = { version = "^0.6", features = ["postgres", "offline", "runtime-async-std-native-tls", "chrono", "uuid", "json"] }
uuid = { version="^1.1", features=["serde", "v4"] }
